Fixed Mockito issue with Java 23 related to ByteBuddy version  and registering Mockito agent with surefire plugin